# Standard-Macro-C-Library

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/stdmacro/: array_size.h  sbtree.h  squeue.h  sstack.h
test/: CMakeLists.txt  sbtree_tests.c  squeue_tests.c  sstack_tests.c
